<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" 
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/buttonMul"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/calc_button"
            android:text="@string/but_mul"
            android:textColor="#FCF9F9"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonDiv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/calc_button"
            android:text="@string/but_div"
            android:textColor="#F5F0F0"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/calc_button"
            android:text="@string/but_clear"
            android:textColor="#F5F0F0"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonEql"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/calc_button"
            android:text="@string/but_equal"
            android:textColor="#F5F0F0"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/buttonSub"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/calc_button"
            android:text="@string/but_sub"
            android:textColor="#F5F0F0"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/calc_button"
            android:text="@string/but_7"
            android:textColor="#F5F0F0"
            android:textSize="36sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/calc_button"
            android:text="@string/but_8"
            android:textColor="#F5F0F0"
            android:textSize="36sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/calc_button"
            android:text="@string/but_9"
            android:textColor="#F5F0F0"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:layout_weight="1">

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/calc_button"
            android:text="@string/but_add"
            android:textColor="#F5F0F0"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/calc_button"
            android:text="@string/but_4"
            android:textColor="#F5F0F0"
            android:textSize="36sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/calc_button"
            android:text="@string/but_5"
            android:textColor="#F5F0F0"
            android:textSize="36sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:background="@drawable/calc_button"
            android:text="@string/but_6"
            android:textColor="#F5F0F0"
            android:textSize="36sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/button0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/calc_button"
            android:text="@string/but_0"
            android:textColor="#F5F0F0"
            android:textSize="36sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/calc_button"
            android:text="@string/but_1"
            android:textColor="#F5F0F0"
            android:textSize="36sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/calc_button"
            android:text="@string/but_2"
            android:textColor="#F5F0F0"
            android:textSize="36sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/calc_button"
            android:text="@string/but_3"
            android:textColor="#F5F0F0"
            android:textSize="36sp" />
    </LinearLayout>

</LinearLayout>